tests/semantic/invalid/duplicate_declaration/test1.src
// Invalid: duplicate declaration in same scope
fn main() -> int {
    int x = 1;
    int x = 2;
    return x;
}
